--- a/3 pages HTML Assingment/login.html
+++ b/3 pages HTML Assingment/login.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Login Form</title>
     <link rel="stylesheet" href="style.css">
+<!-- 
+  Name: "Muhammad Shariq Khan"
+  Roll: "344468" 
+-->
 </head>
 
 <body>
@@ -31,8 +35,8 @@
                 <input type="password" id="password" name="password" placeholder="Enter Password" required>
             </div>
             <div class="button-group">
-                <button type="submit">Submit</button>
-                <button type="reset">Reset</button>
+               <input type="submit">
+               <input type="reset">
             </div>
         </div>
     </div>
