--- a/3 pages HTML Assingment/register.html
+++ b/3 pages HTML Assingment/register.html
@@ -4,76 +4,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration Form</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+<!-- 
+  Name: "Muhammad Shariq Khan"
+  Roll: "344468" 
+-->
 </head>
 
 <body>
+    <a href="./index.html">
+        <img src="./arrow icon.jpg" alt=""> </a>
+    <div class="register-head">
+        <img src="./Smit.png" alt="logo">
+        <h1>STUDENT REGISTRATION FORM</h1>
+    </div>
     <div class="register-main">
-        <a href="./index.html">
-            <img src="./arrow icon.jpg" alt=""> </a>
-
-        <div class="logo">
-            <img src="./Smit.png" alt="SMIT Logo" height="200px" width="200px">
+        <div class="r-one">
+            <ul>
+                <li>FIRST NAME</li>
+                <li>LAST NAME</li>
+                <li>DATE OF BIRTH</li>
+                <li>EMAIL ID</li>
+                <li>MOBILE NUMBER</li>
+                <li>GENDER</li>
+                <li>ADDRESS</li>
+                <li class="city">CITY</li>
+                <li>PIN CODE</li>
+                <li>STATE</li>
+                <li>COUNTRY</li>
+                <li>HOBBIES</li>
+                <li class="qualification">QUALIFICATION</li>
+                <li class="course">COURSES <br> APPLIED FOR</li>
+                <li class="upload">Upload you pic <br> (only .png,.jpg,.jpeg formats allow)</li>
+            </ul>
         </div>
 
-        <h1>STUDENT REGISTRATION FORM</h1>
-
-        <div class="form-container">
-
-
-            <div class="mobile-number-section">
-                <label for="mobile">MOBILE NUMBER</label>
-                <input type="text" id="mobile" name="mobile" placeholder="Enter the Mobile Number" maxlength="10">
-            </div>
-
-            <!-- gender section -->
-            <div class="gender-section">
-                <label>GENDER</label>
-                <input type="radio" id="male" name="gender" value="male">
-                <label for="male">Male</label>
-                <input type="radio" id="female" name="gender" value="female">
-                <label for="female">Female</label>
-            </div>
-
-
-            <div class="address-section">
-                <label for="address">ADDRESS</label>
-                <textarea id="address" name="address"></textarea>
-            </div>
-
-            <div class="location-section">
-                <label for="city">CITY</label>
-                <input type="text" id="city" name="city" placeholder="Enter the City Name" maxlength="30">
-
-                <label for="pin-code">PIN CODE</label>
-                <input type="text" id="pin-code" name="pin-code" placeholder="Enter the Pin Code" maxlength="6">
-
-                <label for="state">STATE</label>
-                <input type="text" id="state" name="state" placeholder="Enter the State" maxlength="30">
-
-                <label for="country">COUNTRY</label>
-                <input type="text" id="country" name="country" placeholder="Enter the Country Name">
-            </div>
-
-            <!--  hobbies Section-->
-            <div class="hobbies-section">
-                <label>HOBBIES</label>
-                <input type="checkbox" id="drawing" name="hobbies" value="drawing">
-                <label for="drawing">Drawing</label>
-                <input type="checkbox" id="singing" name="hobbies" value="singing">
-                <label for="singing">Singing</label>
-                <input type="checkbox" id="dancing" name="hobbies" value="dancing">
-                <label for="dancing">Dancing</label>
-                <input type="checkbox" id="sketching" name="hobbies" value="sketching">
-                <label for="sketching">Sketching</label>
-                <label for="others">Others</label>
-                <input type="text" id="others" name="hobbies">
-            </div>
-
-            <!--  qualification Section-->
-            <div class="qualification-section">
-                <label>QUALIFICATION</label>
+        <div class="r-two">
+            <form>
+                <label>
+                    <input type="text" placeholder="Enter the First Name">
+                    (max 30 characters a-z and A-Z)
+                </label>
+                <label>
+                    <input type="text" placeholder="Enter the Last Name">
+                    (max 30 characters a-z and A-Z)
+                </label>
+                <label>
+                    <input type="date">
+                </label>
+                <label>
+                    <input type="email" placeholder="Enter the Email Address">
+                </label>
+                <label>
+                    <input type="number" placeholder="Enter the Mobile Number">
+                    (10 Digits Numbers)
+                </label>
+                <label>
+                    <input type="radio"  name="gender" value="male">
+                     Male
+                    <input type="radio" name="gender" value="female">
+                    Female
+                </label>
+                <label>
+                    <textarea  cols="40" rows="6"></textarea>
+                </label>
+                <label>
+                    <input type="text" placeholder="Enter the City Name">
+                    (max 30 characters a-z and A-Z)
+                </label>
+                <label>
+                    <input type="number" placeholder="Enter the Pin Code">
+                    (6 Digits Numbers)
+                </label>
+                <label>
+                    <input type="text" placeholder="Enter the State">
+                    (max 30 characters a-z and A-Z)
+                </label>
+                <label>
+                    <input type="text" placeholder="Enter the Country Name">
+                </label>
+                <label class="adjest">
+                    Drawing
+                    <input type="checkbox" >
+                    Singing
+                    <input type="checkbox" >
+                    Dancing
+                    <input type="checkbox" >
+                    Sketching
+                    <input type="checkbox" >
+                    <br>
+                    Other
+                    <input type="checkbox">
+                    <input type="text">
+                </label>
                 <table>
                     <thead>
                         <tr>
@@ -113,29 +137,32 @@
                             <td><input type="text" name="masters-percentage" maxlength="5"></td>
                             <td><input type="text" name="masters-year" maxlength="4"></td>
                         </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>(10 char max)</td>
+                            <td>upto 2 decimal</td>
+                        </tr>
                     </tbody>
                 </table>
-            </div>
+                <label>
+                    <select name="" id="">
+                        <option value="select">Select any Course</option>
+                        <option value="BCA">BCA</option>
+                        <option value="B.A">B.A</option>
+                        <option value="B.Sc">B.Sc</option>
+                        <option value="B.Com">B.Com</option>
+                    </select>
+                </label>
+                <label>
+                    <input type="file">
+                </label>
+                <div class="btns">
+                    <input type="submit">
+                    <input type="reset">
+                </div>
 
-            <!--  courses applied wala Section -->
-            <div class="courses-section">
-                <label for="courses">COURSES APPLIED FOR</label>
-                <select id="courses" name="courses">
-                    <option value="">Select any course</option>
-                </select>
-            </div>
-
-            <!--  file upload Section-->
-            <div class="file-upload-section">
-                <label for="upload">Upload your pic (only .png, .jpg, .jpeg formats allow)</label>
-                <input type="file" id="upload" name="upload" accept=".png, .jpg, .jpeg">
-            </div>
-
-            <!-- Submit aur Reset buttons -->
-            <div class="buttons-section">
-                <button type="submit">Submit</button>
-                <button type="reset">Reset</button>
-            </div>
+            </form>
         </div>
     </div>
 </body>
